fix: cars images
