# docs/swagger.json
@@ -867,7 +867,44 @@
                 }
             }
         },
-        "/v1/cars/images": {
+        "/v1/cars/images/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Удаляет изображение автомобиля по указанному пути",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Car images"
+                ],
+                "summary": "Удаление изображения автомобиля",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID изображения",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Изображение успешно удалено",
+                        "schema": {
+                            "$ref": "#/definitions/internal_interfaces_http_car_image.MessageResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/cars/{car_id}/images": {
             "get": {
                 "security": [
                     {
@@ -886,6 +923,13 @@
                 ],
                 "summary": "Получение списка изображений автомобиля",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID автомобиля",
+                        "name": "car_id",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "default": 0,
@@ -929,6 +973,13 @@
                 "summary": "Загрузка изображения автомобиля",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "description": "ID автомобиля",
+                        "name": "car_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "type": "file",
                         "description": "Изображение автомобиля",
                         "name": "image",
@@ -941,43 +992,6 @@
                         "description": "Марка успешно создана",
                         "schema": {
                             "$ref": "#/definitions/car.CarImageResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/cars/images/{id}": {
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Удаляет изображение автомобиля по указанному пути",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Car images"
-                ],
-                "summary": "Удаление изображения автомобиля",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID изображения",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Изображение успешно удалено",
-                        "schema": {
-                            "$ref": "#/definitions/internal_interfaces_http_car_image.MessageResponse"
                         }
                     }
                 }
@@ -1905,6 +1919,9 @@
         "car.CarImageResponse": {
             "type": "object",
             "properties": {
+                "car_id": {
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1945,8 +1962,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "image_url": {
-                    "type": "string"
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.CarImage"
+                    }
                 },
                 "mark": {
                     "$ref": "#/definitions/entities.CarMark"
@@ -2015,7 +2035,6 @@
             "type": "object",
             "required": [
                 "category_id",
-                "image_url",
                 "mark_id",
                 "name",
                 "price_per_day",
@@ -2026,10 +2045,6 @@
                     "type": "integer",
                     "minimum": 1,
                     "example": 2
-                },
-                "image_url": {
-                    "type": "string",
-                    "example": "https://example.com/car.jpg"
                 },
                 "mark_id": {
                     "type": "integer",
@@ -2168,7 +2183,6 @@
             "type": "object",
             "required": [
                 "category_id",
-                "image_url",
                 "mark_id",
                 "name",
                 "price_per_day",
@@ -2179,10 +2193,6 @@
                     "type": "integer",
                     "minimum": 1,
                     "example": 2
-                },
-                "image_url": {
-                    "type": "string",
-                    "example": "https://example.com/car.jpg"
                 },
                 "mark_id": {
                     "type": "integer",
@@ -2341,8 +2351,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "image_url": {
-                    "type": "string"
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.CarImage"
+                    }
                 },
                 "mark": {
                     "$ref": "#/definitions/entities.CarMark"
@@ -2387,6 +2400,9 @@
         "entities.CarImage": {
             "type": "object",
             "properties": {
+                "car_id": {
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
                 },
